welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: value lenght is not a member of Array[java.awt.Color]
  for(i<-(T.length-1-nb) to T.lenght-1-(T.length-1-nb)){
                              ^